moved commands to notes.sty

--- a/notes.sty
+++ b/notes.sty
@@ -107,6 +107,18 @@ Last Revision: \today
      \end{array}
    \right.}
 
+\newcommand{\bra}[1]{\langle #1 |}
+\newcommand{\ket}[1]{| #1 \rangle}
+\newcommand{\braket}[2]{\langle #1 | #2 \rangle}
+\newcommand{\ba}{\bra{\alpha}}
+\newcommand{\bb}{\bra{\beta}}
+\newcommand{\bg}{\bra{\gamma}}
+\newcommand{\ka}{| \alpha \rangle}
+\newcommand{\kb}{| \beta \rangle}
+\newcommand{\kg}{| \gamma \rangle}
+\newcommand{\mtx}[1]{\left(\begin{matrix}#1\end{matrix}\right)}
+\newcommand{\ebasis}{\ket{e_1}, \ket{e_2}, \ldots, \ket{e_n}}
+\newcommand{\angstrom}{\mbox{\normalfont\AA}}
 \newcommand{\sip}[2]{\langle #1 , #2 \rangle}
 \DeclareMathOperator{\level}{level}
 \newcommand{\f}[2]{\frac{#1}{#2}}
