--- a/phys234/phys234.tex
+++ b/phys234/phys234.tex
@@ -347,4 +347,8 @@
        \end{itemize}
      \end{itemize}
 
+     \subsection{Tutorial 2}
+
+     Tutorial 2 concerns coin flipping, the SPINS program, and connections to Quantum Theory. We played games.
+
   \end{document}
