--- a/notes.sty
+++ b/notes.sty
@@ -107,15 +107,15 @@ Last Revision: \today
      \end{array}
    \right.}
 
-\newcommand{\bra}[1]{\langle #1 |}
-\newcommand{\ket}[1]{| #1 \rangle}
+\newcommand{\bra}[1]{\left. \langle #1 \right|}
+\newcommand{\ket}[1]{\left| #1 \rangle \right.}
 \newcommand{\braket}[2]{\langle #1 | #2 \rangle}
 \newcommand{\ba}{\bra{\alpha}}
 \newcommand{\bb}{\bra{\beta}}
 \newcommand{\bg}{\bra{\gamma}}
-\newcommand{\ka}{| \alpha \rangle}
-\newcommand{\kb}{| \beta \rangle}
-\newcommand{\kg}{| \gamma \rangle}
+\newcommand{\ka}{\left| \alpha \rangle \right.}
+\newcommand{\kb}{\left| \beta \rangle \right.}
+\newcommand{\kg}{\left| \gamma \rangle \right.}
 \newcommand{\mtx}[1]{\left(\begin{matrix}#1\end{matrix}\right)}
 \newcommand{\ebasis}{\ket{e_1}, \ket{e_2}, \ldots, \ket{e_n}}
 \newcommand{\angstrom}{\mbox{\normalfont\AA}}
